--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
 streamlit                             
 streamlit_webrtc                                                           
-opencv-python                             
+opencv-python-headless                             
 mediapipe==0.8.9.1
